@@ -1,3 +1,7 @@
+2004-07-30  Wakaba  <wakaba@suika.fam.cx>
+
+	* Node.pm (#declaration:inner_xml): No 'uninitialized' error!
+
 2004-02-26  Wakaba  <wakaba@suika.fam.cx>
 
 	* Node.pm: New export tag 'declaration' added.
